# Stonks

./: .env.example  .gitignore  README.md
backtest_docs/: STRATEGY_FINDINGS.md  discordnotes.txt  machine_testable_ruleset.md  trading_guide.txt
backtest_tools/: backtest_final.py  backtest_ruleset.py  backtest_v2.py  backtest_v3.py  fetch_polygon_data.py  multi_model_backtest.py  stock_classifier.py  strategy_config.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  (+1 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: LiveTickers.tsx  Sparkline.tsx  SymbolDetail.tsx  SymbolList.tsx  TickerCard.tsx
frontend/components/: TickerBoard.tsx  TickerChartPanel.tsx  TickerSettingsPage.tsx  TickerTable.tsx  TickerTape.tsx  useFinnhubQuotes.ts  useTickerSettings.ts
frontend/lib/: chartData.ts  dataCollector.ts  format.ts  mockData.ts  tickerColumns.tsx  types.ts
frontend/types/: recharts-public.d.ts
rust_backend/: Cargo.toml
rust_backend/data_collector/: Cargo.toml
rust_backend/data_collector/src/: alt_data.rs  binance.rs  congress_free.rs  congress_sources.rs  database.rs  finnhub.rs  historical.rs  main.rs  polygon.rs  simulator.rs
rust_backend/execution_engine/: Cargo.toml
rust_backend/execution_engine/src/: main.rs
rust_backend/shared/: Cargo.toml
rust_backend/shared/src/: lib.rs
(+68 files in other folders)
