[package]
name = "data_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2.4"
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
axum = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies", "multipart", "rustls-tls"] }
scraper = "0.18"
regex = "1.10"
async-trait = "0.1"
dotenv = "0.15"
